force-app/main/default/objects/Sf_Org_OAuth_Secret__c/Sf_Org_OAuth_Secret__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OAuth client id, secret, callback URL, and AES key for Connect With Salesforce Org. Do not commit values.</description>
    <label>Sf Org OAuth Secret</label>
</CustomObject>