force-app/main/default/objects/Sf_Org_OAuth_Secret__c/fields/Aes_Key__c.field-meta.xml
<CustomField>
    <fullName>Aes_Key__c</fullName>
    <label>AES Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>