force-app/main/default/objects/Sf_Org_OAuth_Secret__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>